# ChangeLog for app-office/texstudio
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/texstudio/ChangeLog,v 1.42 2015/03/11 08:35:03 jlec Exp $

  11 Mar 2015; Justin Lecher <jlec@gentoo.org> texstudio-2.9.0.ebuild:
  Add missing qt5 deps, #542736

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> texstudio-2.9.0.ebuild:
  Set default qt choice

*texstudio-2.9.0 (09 Mar 2015)

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> +texstudio-2.9.0.ebuild:
  Version bump;add qt5 support

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> texstudio-2.8.4.ebuild,
  texstudio-2.8.6.ebuild, texstudio-2.8.8.ebuild:
  Add ~ppc64, wrt bug #488996

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> texstudio-2.8.4.ebuild,
  texstudio-2.8.6.ebuild, texstudio-2.8.8.ebuild:
  Add ~ppc, wrt bug #488996

  03 Feb 2015; Justin Lecher <jlec@gentoo.org> texstudio-2.8.6.ebuild:
  Add another missing USE constraint

  03 Feb 2015; Justin Lecher <jlec@gentoo.org> texstudio-2.8.8.ebuild:
  Add missing USE_DEP for dev-qt/qtsingleapplication

  04 Jan 2015; Justin Lecher <jlec@gentoo.org> +texstudio-2.8.4.ebuild:
  Add stable version back, #533826

  31 Dec 2014; Michael Palimaka <kensington@gentoo.org> texstudio-2.8.6.ebuild,
  texstudio-2.8.8.ebuild:
  Enforce USE dependency for media-libs/phonon.

  26 Dec 2014; Justin Lecher <jlec@gentoo.org> -texstudio-2.6.0.ebuild,
  -texstudio-2.8.2.ebuild, -texstudio-2.8.4.ebuild:
  Drop old

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> texstudio-2.8.4.ebuild:
  Stable for x86, wrt bug #528102

  22 Dec 2014; Chema Alonso <nimiux@gentoo.org> texstudio-2.8.4.ebuild:
  Stable for amd64 wrt bug #528102

*texstudio-2.8.8 (08 Dec 2014)

  08 Dec 2014; Justin Lecher <jlec@gentoo.org> +texstudio-2.8.8.ebuild:
  Version Bump, #531972

*texstudio-2.8.6 (03 Nov 2014)

  03 Nov 2014; Justin Lecher <jlec@gentoo.org> +texstudio-2.8.6.ebuild:
  Version Bump, #528030

*texstudio-2.8.4 (16 Sep 2014)
