@@ -11,28 +11,30 @@ DIST texstudio-2.8.4.tar.gz 25126093 SHA256 b4a867f9cce1af962069f4429bc774e30b0f
 DIST texstudio-2.8.6.tar.gz 25183578 SHA256 b665040c34ad6cd98d8f6e041393028f115da4dfb5bb8829b49dfa5a96fa755f SHA512 af8b4dd54c57c1f34fc316095075c3beee13f323cef0db9b364e7c929ff6d7bfe1d6d66bd7e6bf1127b8394ad6e452510248e11b5c009d6ffba355edffdf064d WHIRLPOOL 6707398bb405c820c3e0591bc0a0f58ad152f01950c4aa4a4a4aeba12d078f29087ef5dac3274f745ebf26c17049bc1dc168b51c53c8a6e9a1626eae41994413
 DIST texstudio-2.8.8.tar.gz 25198033 SHA256 5d00c42425c0d1464438c0c1701508fef281f5dbdd0fbcebdbba9de60ac6db95 SHA512 b4f50368ac4a145ad6cb6c764d2d84ac0c3b0b08903b53390e34fb3a8d2e2c12b72cdf77cf97ea22df94a29438be6db3004f8663e04c5254ae40bf28bc2be152 WHIRLPOOL 08d4af41163ebfa85539001fe540a5f48b86e341d93983a42da03015d00460b30280f5fa08c50c90c97d7e1ed38d324efea666c6640b6bba421cffd832031e27
 DIST texstudio-2.9.0.tar.gz 25296387 SHA256 e984ebc4393de13d9f20f474ce88382d587b2f8d0fb741f606a790a8f84a974a SHA512 5985162bd9695e1c5b4377e8230e4bc41de0becc0b41dc8d23f428824d58ea91eb83dd52d2546c457350b039423ab6e4f6ae7d8fffcb701345d0c3f8f02da5b4 WHIRLPOOL 2e3ae47c585ca452a5bf822c9e4da8ad6204ee2273753c21f87a04f65f2d166c3bc5936502a2c9de83e6446ecad2587ccdb223820d4968f60918cf63ebf85c73
+DIST texstudio-2.9.4.tar.gz 25292627 SHA256 dc71590e3745ac193a640667737befd665d549e642e268eec7a8238d3b61b5ea SHA512 6fd35a6490451f9cc3292245857e66d6b0d18d2fb06e0482a8e9bbb8695923c8d3da32a6aa6b8ec591c74ccd81f797ddb958e85db26c90d0096cc678a5f14a49 WHIRLPOOL 9ca5ad727d0096bd986b39b34691167bfafe6ae44c4193fdd1f6f02bdd8c4b8b0cd4ac31af3c1c2833c1ba13f0acf814d3ba14fb0709dc3bbd5ee50729968cdf
 EBUILD texstudio-2.8.4.ebuild 1947 SHA256 a22cd5b7ec76d98fd0c7fb566573175d5084db800362752228ce6f327d1ef82e SHA512 5cdc57cfff199d6ad8f97cd64ade3c728e9591bd250471a6478a0c2102802aa04eef2182a53d96e6b73eed2df5c1124ec99aa2b0d5972835672ea6d1eb6cd621 WHIRLPOOL 8e1ac6edeebd835a38892d9ca26ae1683ef5184af6c1061dd3e44edbda1e54e95677a92115c5ebb0643e720235776162557f5a2d234630a8901702ba6ee1b722
 EBUILD texstudio-2.8.6.ebuild 1980 SHA256 d1703d501fed70eae833a5aa134904f5ec992424f8f49651b2b1daf744f833d3 SHA512 c91d3d9328431de63c9ed4e901530cdbe6db96e829d5957d7385878efa881f247d11ca1afd0c44fcd3c56522ad82ede10f0b5e3f127e50bbee81bd87ebb5f72a WHIRLPOOL 751a6f20d88b672b574d0999a02cbaff5cd28e3c23b1fb6939e2e083fea4dcbd1c30f93ea17eee8858fd7f9fbbfce02bb30212ff339d0432a623a5cab2e4230a
 EBUILD texstudio-2.8.8.ebuild 1959 SHA256 226dce4db27f3665bb920ab954cdb211855ea73ab9f58e2f3dc658c6ea0a76d3 SHA512 2ec609769128da66244703f17638ea838df69ae8125f71d95f50beea34a734f737bc27d6d7a48609b742e347813d8bb314c66f66c3e2332c03fb1eca2cc30a6b WHIRLPOOL acb08c2199afdac0d4b0c089fbc577d7cb55ee6e18cf63f8faf287dcfce22fac4ec97221a6cec285ccbd71e8d5d5ac39faa1d4d229f07064713b4a6f29378876
 EBUILD texstudio-2.9.0.ebuild 2443 SHA256 ecb88c3d19098f3633436209ace0a538cdeea7b195a5acecb99d9215bbf56711 SHA512 49b1307dc50704728f52be50726813c5982b3d0cf731b915df79abfe67d4f7ada27e0a16d52a2a9560517be9cbbe24cd0da42622bd4029bef6f177e7587c77fa WHIRLPOOL b1e69c24b1022f1cefff0d82ea2a68e457217822d49530c2ef4d42534d6f9bdc95f93ff0631ce1267d7aec7b5df1b166fc64650324fa0470fae29f5276d0ce5d
-MISC ChangeLog 7491 SHA256 126258f4366dbf562753a1388095b1607e236789211f03776a20547de4f2a9a3 SHA512 5129a4241b709e5001a80702b6a251d02c05b585830489438d225ad344a595de0f6b42f75b526248589c6600c26ad88983ce9efa1ccfecb73b48a72a066005df WHIRLPOOL 405bbee841cddbd96bcc48512bd2bc44c5f7bfb101e781a5eaf7ddec75f261ad752d2e5c0fd80eba0ac5fdff884cf96a89654517724f6d353fce1be9c46a45bb
+EBUILD texstudio-2.9.4.ebuild 2443 SHA256 d5bb39301cf20ff1144928aeef05adeb776b61810737e0e53a60dcd07896cbfe SHA512 d4fd06ad22d1019b4e734c4a95847474da8ce0b999000eaaa983b2936249b1c1c74323da0d1ccc3b88e4f47832cedfea155be92267f6835d37e839887846def1 WHIRLPOOL a6c113d285cb463edbc0e123867f5d4114409a586da1305e43b8862de563c8f7c2a4567e7f7ed3074445de77db88b118edac20c4a3234a7ee0d6b929f254528a
+MISC ChangeLog 7624 SHA256 f5e2ce4e8c4842bb4cbe1d860cecb595acf9c5964ff5d7a6f61f7a0dcab7389c SHA512 d2e0d105b7b36a38a95d191ec5265f2f341a7df529475bc6a59a42f8bc2aa0931585984064632fc079439b8a9cedb9ae4ab78c387bcf38ad776f3d842c2b9b8e WHIRLPOOL 4f9c2236b85a2f0b2a0e997b26d037fab615abeffd2340b6675e7c0f9fc6f0c622608df0e3cda2238121187e65bfd939f50c578940f38fe4ca462f09d149e5e7
 MISC metadata.xml 283 SHA256 0c64e26ba93ec0d8dd149b088c63e4448174b2f843c91e1f74ac17c2a5feea27 SHA512 74ce72ee9b32eb81077907416c71890c37d20055481df15f0e056e083fe300701dabf6d8df11aa1ecbed13c1ea167305417050ca2e41f4e1b63e2a434f18c821 WHIRLPOOL ac0ac10f27910c9beb29ab731afbe9bce6c4811fb0a1f787036ae1b0638dbdb6ba2a744b3ad4ca6fa5a649a4a8be082969cbe99c8bcd0cdceea8252a5268df4d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU//44XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVFV1OXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirRzQP/1l+OcExBJDPVpNI4Sahp9cL
-Cw6vFuqUJOKLT2vPDFR7QXvR4qkGJ4sDCFdolZQJXhtPNLjB8p6U2WWlH2Gh55Zd
-2i1hXJvupfKDDdGjaJMmDEijS2qZ3Ga2lEGkN/4SaAhYNTG0xqOTWHhQWPxj67JE
-rXss7DK1tmCaHaR2ma8JsfnZbua2Q5Wbd3PgOGfnoXCAMPgkRjbARy5S9Hawshhy
-YLIeMkgxSWCFXZatVLlKZd76uehrgoIvF7OYy1oHnlsiYuaKSchTeC58V6G3VgfN
-Fw39vbYTEZnuka4WiOUIVVjv25wMqJsiKPkfLqPdzo4G3+bzEL3CMh7Jx+w7UO+8
-WYEL45ReGYTu7giZ3DO/Po/oo9qcsH3XOTbIyxMa6LFXLtypCheNJ5/ubujeZnlz
-rPFgQDt5H54MtYZccCgktPktra4W9TjUxq5QjkJrDfEOB4WCutJlldhGnVS5zF7h
-M21o6S4pHx2UD4eism3+Pikca2o7OW6WSB1AVVRMPhoqvBblgMplF2l0nFmLtY+o
-qLla69sUBg39VVuXxHpWB54OhkKaEHEv3YrMBSi8LnEDRmIeGqkdxvHZMmUCaS0g
-4SrduCOU8PoE70RV4aCWZM/CE+jwgVI+85PW/7WPqgZxb+4n3WpRNtZssffQwT4H
-FHEcegXkD+92WAxXi2QR
-=oMI+
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVireVsP/1RUrUEixPW3GaxE63TqvpnG
+Hy/YYatN2zzwP/RrxKPLsKQv7GZSwmdGhfDcvPZioQ8gimxLY6zQmNY+swa/HHX4
+tzSz/fbZh3bO62U1czFKwb7YSiprPrVhtCivoET3d3iBeCSmirGr9OPEQdbzPry0
+OcZtO4AQ6EVbLqvKgKxqQr6jt62FBsBceycPRl2KSpxN6x8cMMwjK6H+3ZGx6V70
+qJSMZdEFDHGErHcJhMeKiAPz+DuDRMueRUu97k4iufY/oLDtlFgxyar+S1mf2o3s
+KMP9vE/5MQq4egsvnFyxWnmwDtZO6O7xPAsUcMRURZcyTP8Nf1txmtq3Y8qKOzkF
+g5YIWsqHuEKaSIabSaTOgezjYGjolucu8sg2vwUGBA2nPakFFdmQrGe6sSOHATI9
+iAaDiePVqaATlBJDjVXIqgT/DQAT+3TCJ4LOezFatDk9gSr9Wy4YK3SJZBwC5YF7
+2TLQUNKXZzXjFARaSduqcSkEyaXsb3HdLUeQnzlxOnrRcpwRUap8S+wIcxJBI0qM
++Rnt+ZZkzpT4apsyt/Ns7lk7ur3PYGdmdvl4LNpPfHo4apB8E9dRPt0OfwLK5K6v
+JcFKpl69KxYRQfsOfkvwwchOKg8OLIp1Jll10lhIIsvRWyssyEnhp1IYnV3m2ZWq
+tq41xZu9MBDKgAkESq0d
+=3vwe
 -----END PGP SIGNATURE-----
